--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <!-- 1st navbar  -->
+    <!-- 1st top navbar  -->
     <section>
       <div class="navbar bg-base-100">
         <div class="flex-1">
-          <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
+          <a class="btn btn-ghost normal-case text-xl">News Website API</a>
         </div>
         <div class="flex-none">
           <ul class="menu menu-horizontal p-0">
-            <li><a>Item 1</a></li>
+            <li><a>News</a></li>
             <li tabindex="0">
               <a>
-                Parent
+                Blog
                 <svg
                   class="fill-current"
                   xmlns="http://www.w3.org/2000/svg"
@@ -45,14 +45,17 @@
                 </svg>
               </a>
               <ul class="p-2 bg-base-100">
-                <li><a>Submenu 1</a></li>
-                <li><a>Submenu 2</a></li>
+                <li><a>HTML5</a></li>
+                <li><a>CSS3</a></li>
+                <li><a>Javascript</a></li>
+                <li><a>API</a></li>
               </ul>
             </li>
-            <li><a>Item 3</a></li>
+            <li><a>About us</a></li>
           </ul>
         </div>
       </div>
+      <div class="divider"></div>
     </section>
   </body>
 </html>
