static card design

--- a/index.html
+++ b/index.html
@@ -59,12 +59,47 @@
       </div>
       <div class="divider"></div>
       <!-- 2nd top navbar  -->
-      <div class="  ">
+      <div class=" mb-6 ">
         <!-- <ul class=" grid grid-cols-3 md:grid-cols-6 lg:grid-cols-12"> -->
         <!-- <ul id="second-navbar" class="   grid grid-cols-3 md:grid-cols-6 lg:grid-cols-8"> -->
         <ul id="second-navbar" class="navbar-center grid md:grid-cols-3 lg:grid-cols-8">
           <!-- <li><a class="btn btn-ghost normal-case text-xl">Item 1</a></li> -->
         </ul>
+      </div>
+    </section>
+
+    <section>
+      <div id="card-container ">
+        <!-- 1st card  -->
+        <div class="container mx-auto my-10	">
+          <div class="card card-side bg-base-100 shadow-xl">
+            <figure class="w-3/4"><img class="rounded-xl" src="https://i.ibb.co/QnwC4sG/unsplash-Eh-Tc-C9s-YXsw-11.png" alt="Movie"></figure>
+            <div class="card-body">
+              <h2 class="card-title text-2xl">Biden Pledges Nearly $3 Billion To Ukraine In Largest U.S. Military Aid Package Yet</h2>
+              <p class="">Wednesday, August 24, 2022 | Tag Cloud Tags: Biden, EU, Euro, Europe, Joe Biden, Military, News, Russia, Security, UK, Ukraine, United States, Worthy News (Worthy News) – U.S. President Joe Biden has announced nearly $3 billion in new U.S. military aid for Kyiv as Ukraine marked its independence day six months after Russia invaded the country.'The United States of America is committed to supporting the people of Ukraine as they continue the fight to defend their sovereignty. As part of that commitment, I am proud to announce our biggest tranche of security assistance to date: approximately $2.</p>
+              <div>
+              <div class="card-actions justify-between my-5">
+                <div class="flex">
+                  <div class="avatar">
+                    <!-- <div class="w-12 rounded-full ring ring-base-content ring-offset-base-100 ring-offset-2"> -->
+                    <div class="w-12 mask mask-decagon">
+                      <img src="https://placeimg.com/192/192/people" />
+                    </div>
+                  </div>
+                  <div class="mx-3">
+                    <p>Raisul Islam Rimon</p>
+                    <p>Today's date: 03 September 2022</p>
+                  </div>
+                </div>
+                <div>
+                  
+                </div>
+                <button class="btn btn-primary">Read More </button>
+              </div>
+            </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
