four card static

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- google icon cdn  -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    </head>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+  </head>
   <body>
     <section>
       <!-- 1st top navbar  -->
@@ -61,58 +64,360 @@
       </div>
       <div class="divider"></div>
       <!-- 2nd top navbar  -->
-      <div class=" mb-6 ">
+      <div class="mb-6">
         <!-- <ul class=" grid grid-cols-3 md:grid-cols-6 lg:grid-cols-12"> -->
         <!-- <ul id="second-navbar" class="   grid grid-cols-3 md:grid-cols-6 lg:grid-cols-8"> -->
-        <ul id="second-navbar" class="navbar-center grid md:grid-cols-3 lg:grid-cols-8">
+        <ul
+          id="second-navbar"
+          class="navbar-center grid md:grid-cols-3 lg:grid-cols-8"
+        >
           <!-- <li><a class="btn btn-ghost normal-case text-xl">Item 1</a></li> -->
         </ul>
       </div>
     </section>
 
     <section>
-      <div id="card-container ">
+      <div id="news-container">
         <!-- 1st card  -->
-        <div class="container mx-auto my-10	">
-          <div class="card card-side bg-base-100 shadow-xl">
-            <figure class="w-3/4"><img class="rounded-xl" src="https://i.ibb.co/QnwC4sG/unsplash-Eh-Tc-C9s-YXsw-11.png" alt="Movie"></figure>
-            <div class="card-body">
-              <h2 class="card-title text-2xl">Biden Pledges Nearly $3 Billion To Ukraine In Largest U.S. Military Aid Package Yet</h2>
-              <p class="">Wednesday, August 24, 2022 | Tag Cloud Tags: Biden, EU, Euro, Europe, Joe Biden, Military, News, Russia, Security, UK, Ukraine, United States, Worthy News (Worthy News) – U.S. President Joe Biden has announced nearly $3 billion in new U.S. military aid for Kyiv as Ukraine marked its independence day six months after Russia invaded the country.'The United States of America is committed to supporting the people of Ukraine as they continue the fight to defend their sovereignty. As part of that commitment, I am proud to announce our biggest tranche of security assistance to date: approximately $2.</p>
-              <div>
-              <div class="card-actions justify-between my-5">
-                <div class="flex">
-                  <div class="avatar">
-                    <div class="w-12 mask mask-decagon">
-                      <img src="https://placeimg.com/192/192/people" />
+        <div class="container mx-auto my-10">
+          <div>
+            <div class="card card-side bg-base-100 shadow-xl">
+              <figure class="w-3/4">
+                <img
+                  class="rounded-xl"
+                  src="https://i.ibb.co/QnwC4sG/unsplash-Eh-Tc-C9s-YXsw-11.png"
+                  alt="Movie"
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title text-2xl">
+                  Biden Pledges Nearly $3 Billion To Ukraine In Largest U.S.
+                  Military Aid Package Yet
+                </h2>
+                <p class="">
+                  Wednesday, August 24, 2022 | Tag Cloud Tags: Biden, EU, Euro,
+                  Europe, Joe Biden, Military, News, Russia, Security, UK,
+                  Ukraine, United States, Worthy News (Worthy News) – U.S.
+                  President Joe Biden has announced nearly $3 billion in new
+                  U.S. military aid for Kyiv as Ukraine marked its independence
+                  day six months after Russia invaded the country.'The United
+                  States of America is committed to supporting the people of
+                  Ukraine as they continue the fight to defend their
+                  sovereignty. As part of that commitment, I am proud to
+                  announce our biggest tranche of security assistance to date:
+                  approximately $2.
+                </p>
+                <div>
+                  <div class="card-actions justify-between my-5">
+                    <div class="flex">
+                      <div class="avatar">
+                        <div class="w-12 mask mask-decagon">
+                          <img src="https://placeimg.com/192/192/people" />
+                        </div>
+                      </div>
+                      <div class="mx-3">
+                        <p>Raisul Islam Rimon</p>
+                        <p>Today's date: 03 September 2022</p>
+                      </div>
                     </div>
+                    <div class="flex mt-4">
+                      <span class="material-symbols-outlined">
+                        visibility
+                      </span>
+                      <span class="mx-2">1.5M</span>
+                    </div>
+                    <div class="rating mt-4">
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                        checked
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                    </div>
+                    <label for="my-modal-6" class="btn btn-primary">Read More</label>
                   </div>
-                  <div class="mx-3">
-                    <p>Raisul Islam Rimon</p>
-                    <p>Today's date: 03 September 2022</p>
-                  </div>
                 </div>
-                <div class="flex mt-4">
-                  <span class="material-symbols-outlined">
-                    visibility
-                    </span>
-                    <span class="mx-2">1.5M</span>
-                </div>
-                <div class="rating mt-4">
-                  <input type="radio" name="rating-1" class="mask mask-star" />
-                  <input type="radio" name="rating-1" class="mask mask-star" checked />
-                  <input type="radio" name="rating-1" class="mask mask-star" />
-                  <input type="radio" name="rating-1" class="mask mask-star" />
-                  <input type="radio" name="rating-1" class="mask mask-star" />
-                </div>
-                <button class="btn btn-primary">Read More </button>
               </div>
             </div>
+            <div class="card card-side bg-base-100 shadow-xl">
+              <figure class="w-3/4">
+                <img
+                  class="rounded-xl"
+                  src="https://i.ibb.co/QnwC4sG/unsplash-Eh-Tc-C9s-YXsw-11.png"
+                  alt="Movie"
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title text-2xl">
+                  Biden Pledges Nearly $3 Billion To Ukraine In Largest U.S.
+                  Military Aid Package Yet
+                </h2>
+                <p class="">
+                  Wednesday, August 24, 2022 | Tag Cloud Tags: Biden, EU, Euro,
+                  Europe, Joe Biden, Military, News, Russia, Security, UK,
+                  Ukraine, United States, Worthy News (Worthy News) – U.S.
+                  President Joe Biden has announced nearly $3 billion in new
+                  U.S. military aid for Kyiv as Ukraine marked its independence
+                  day six months after Russia invaded the country.'The United
+                  States of America is committed to supporting the people of
+                  Ukraine as they continue the fight to defend their
+                  sovereignty. As part of that commitment, I am proud to
+                  announce our biggest tranche of security assistance to date:
+                  approximately $2.
+                </p>
+                <div>
+                  <div class="card-actions justify-between my-5">
+                    <div class="flex">
+                      <div class="avatar">
+                        <div class="w-12 mask mask-decagon">
+                          <img src="https://placeimg.com/192/192/people" />
+                        </div>
+                      </div>
+                      <div class="mx-3">
+                        <p>Raisul Islam Rimon</p>
+                        <p>Today's date: 03 September 2022</p>
+                      </div>
+                    </div>
+                    <div class="flex mt-4">
+                      <span class="material-symbols-outlined">
+                        visibility
+                      </span>
+                      <span class="mx-2">1.5M</span>
+                    </div>
+                    <div class="rating mt-4">
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                        checked
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                    </div>
+                    <label for="my-modal-6" class="btn btn-primary">Read More</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card card-side bg-base-100 shadow-xl">
+              <figure class="w-3/4">
+                <img
+                  class="rounded-xl"
+                  src="https://i.ibb.co/QnwC4sG/unsplash-Eh-Tc-C9s-YXsw-11.png"
+                  alt="Movie"
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title text-2xl">
+                  Biden Pledges Nearly $3 Billion To Ukraine In Largest U.S.
+                  Military Aid Package Yet
+                </h2>
+                <p class="">
+                  Wednesday, August 24, 2022 | Tag Cloud Tags: Biden, EU, Euro,
+                  Europe, Joe Biden, Military, News, Russia, Security, UK,
+                  Ukraine, United States, Worthy News (Worthy News) – U.S.
+                  President Joe Biden has announced nearly $3 billion in new
+                  U.S. military aid for Kyiv as Ukraine marked its independence
+                  day six months after Russia invaded the country.'The United
+                  States of America is committed to supporting the people of
+                  Ukraine as they continue the fight to defend their
+                  sovereignty. As part of that commitment, I am proud to
+                  announce our biggest tranche of security assistance to date:
+                  approximately $2.
+                </p>
+                <div>
+                  <div class="card-actions justify-between my-5">
+                    <div class="flex">
+                      <div class="avatar">
+                        <div class="w-12 mask mask-decagon">
+                          <img src="https://placeimg.com/192/192/people" />
+                        </div>
+                      </div>
+                      <div class="mx-3">
+                        <p>Raisul Islam Rimon</p>
+                        <p>Today's date: 03 September 2022</p>
+                      </div>
+                    </div>
+                    <div class="flex mt-4">
+                      <span class="material-symbols-outlined">
+                        visibility
+                      </span>
+                      <span class="mx-2">1.5M</span>
+                    </div>
+                    <div class="rating mt-4">
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                        checked
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                    </div>
+                    <label for="my-modal-6" class="btn btn-primary">Read More</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card card-side bg-base-100 shadow-xl">
+              <figure class="w-3/4">
+                <img
+                  class="rounded-xl"
+                  src="https://i.ibb.co/QnwC4sG/unsplash-Eh-Tc-C9s-YXsw-11.png"
+                  alt="Movie"
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title text-2xl">
+                  Biden Pledges Nearly $3 Billion To Ukraine In Largest U.S.
+                  Military Aid Package Yet
+                </h2>
+                <p class="">
+                  Wednesday, August 24, 2022 | Tag Cloud Tags: Biden, EU, Euro,
+                  Europe, Joe Biden, Military, News, Russia, Security, UK,
+                  Ukraine, United States, Worthy News (Worthy News) – U.S.
+                  President Joe Biden has announced nearly $3 billion in new
+                  U.S. military aid for Kyiv as Ukraine marked its independence
+                  day six months after Russia invaded the country.'The United
+                  States of America is committed to supporting the people of
+                  Ukraine as they continue the fight to defend their
+                  sovereignty. As part of that commitment, I am proud to
+                  announce our biggest tranche of security assistance to date:
+                  approximately $2.
+                </p>
+                <div>
+                  <div class="card-actions justify-between my-5">
+                    <div class="flex">
+                      <div class="avatar">
+                        <div class="w-12 mask mask-decagon">
+                          <img src="https://placeimg.com/192/192/people" />
+                        </div>
+                      </div>
+                      <div class="mx-3">
+                        <p>Raisul Islam Rimon</p>
+                        <p>Today's date: 03 September 2022</p>
+                      </div>
+                    </div>
+                    <div class="flex mt-4">
+                      <span class="material-symbols-outlined">
+                        visibility
+                      </span>
+                      <span class="mx-2">1.5M</span>
+                    </div>
+                    <div class="rating mt-4">
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                        checked
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-1"
+                        class="mask mask-star"
+                      />
+                    </div>
+                    <label for="my-modal-6" class="btn btn-primary">Read More</label>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- modal container -->
+    <div>
+      <!-- <label for="my-modal-6" class="btn modal-button">open modal</label> -->
+
+      <input type="checkbox" id="my-modal-6" class="modal-toggle" />
+      <div class="modal modal-bottom sm:modal-middle">
+        <div class="modal-box">
+          <h3 class="font-bold text-lg">
+            Congratulations random Internet user!
+          </h3>
+          <p class="py-4">
+            You've been selected for a chance to get one year of subscription to
+            use Wikipedia for free!
+          </p>
+          <div class="modal-action">
+            <label for="my-modal-6" class="btn">Yay!</label>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="js/index.js"></script>
   </body>
