--- a/index.html
+++ b/index.html
@@ -25,56 +25,64 @@
     />
   </head>
   <body>
-    <section>
-      <!-- 1st top navbar  -->
-      <div class="navbar bg-base-100">
-        <div class="flex-1">
-          <a class="btn btn-ghost normal-case text-xl bg-green-300"
-            >News Website API</a
-          >
+    <!-- header section  -->
+    <header>
+      <section>
+        <!-- 1st top navbar  -->
+        <div class="navbar bg-base-100">
+          <div class="flex-1">
+            <a class="btn btn-ghost normal-case text-xl bg-green-300"
+              >News Website API</a
+            >
+          </div>
+          <div class="flex-none">
+            <ul class="menu menu-horizontal p-0">
+              <li><a>News</a></li>
+              <li><a>Blog</a></li>
+              <li tabindex="0">
+                <a>
+                  DOCUMENTATION
+                  <svg
+                    class="fill-current"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
+                    />
+                  </svg>
+                </a>
+                <ul class="p-2 bg-base-100">
+                  <li><a>HTML5</a></li>
+                  <li><a>CSS3</a></li>
+                  <li><a>Javascript</a></li>
+                  <li><a>API</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="flex-none">
-          <ul class="menu menu-horizontal p-0">
-            <li><a>News</a></li>
-            <li><a>Blog</a></li>
-            <li tabindex="0">
-              <a>
-                DOCUMENTATION
-                <svg
-                  class="fill-current"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 24 24"
-                >
-                  <path
-                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
-                  />
-                </svg>
-              </a>
-              <ul class="p-2 bg-base-100">
-                <li><a>HTML5</a></li>
-                <li><a>CSS3</a></li>
-                <li><a>Javascript</a></li>
-                <li><a>API</a></li>
-              </ul>
-            </li>
-          </ul>
+        <div class="divider"></div>
+        <!-- 2nd top navbar  -->
+        <div class="mb-6">
+          <ul
+            id="second-navbar"
+            class="navbar-center grid md:grid-cols-3 lg:grid-cols-8"
+          ></ul>
         </div>
-      </div>
-      <div class="divider"></div>
-      <!-- 2nd top navbar  -->
-      <div class="mb-6">
-        <ul
-          id="second-navbar"
-          class="navbar-center grid md:grid-cols-3 lg:grid-cols-8"
-        ></ul>
-      </div>
-    </section>
+      </section>
+    </header>
 
+    <!-- news container  -->
     <section class="container mx-auto my-10">
       <div id="news-container"></div>
     </section>
+
+    
+
+
 
     <!-- modal container -->
     <div id="read-more-modal">
