--- a/index.html
+++ b/index.html
@@ -80,10 +80,6 @@
       <div id="news-container"></div>
     </section>
 
-    
-
-
-
     <!-- modal container -->
     <div id="read-more-modal">
       <input type="checkbox" id="my-modal-6" class="modal-toggle" />
@@ -93,6 +89,12 @@
       ></div>
     </div>
 
+    <!-- footer section  -->
+    <footer class="p-6 text-center">
+      <p>Copyright © 2022 - All right reserved</p>
+    </footer>
+
+    <!-- custom javascript -->
     <script src="js/index.js"></script>
   </body>
 </html>
