error no data found update

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
       <div id="news-container"></div>
     </section>
 
+    <!-- error message -->
+    <section class="container mx-auto">
+      <button id="no-data-msg" class="btn btn-block btn-error text-white pt-14 pb-20 text-xl hidden">
+        No data available
+      </button>
+    </section>
+
     <!-- modal container -->
     <div id="read-more-modal">
       <input type="checkbox" id="my-modal-6" class="modal-toggle" />
@@ -90,8 +97,8 @@
     </div>
 
     <!-- footer section  -->
-    <footer class="p-6 text-center">
-      <p>Copyright © 2022 - All right reserved</p>
+    <footer class="p-6 text-center " >
+      <p class="">Copyright © 2022 - All right reserved</p>
     </footer>
 
     <!-- custom javascript -->
