show total result count added

--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
             class="navbar-center grid md:grid-cols-3 lg:grid-cols-8"
           ></ul>
         </div>
+        <!-- news found title section -->
+        <div class="container mx-auto">
+          <h3 class="text-xl font-medium">
+            <span id="item-number">4</span> items found for category
+            <span class="category-name">Entertainment</span>
+          </h3>
+        </div>
       </section>
     </header>
 
@@ -82,9 +89,14 @@
 
     <!-- error message -->
     <section class="container mx-auto">
-      <button id="no-data-msg" class="btn btn-block btn-error text-white pt-14 pb-20 text-xl hidden">
-        No data available
-      </button>
+      <div class="">
+        <button
+          id="no-data-msg"
+          class="btn btn-block btn-error text-white pt-14 pb-20 text-xl hidden"
+        >
+          No data available
+        </button>
+      </div>
     </section>
 
     <!-- modal container -->
@@ -97,7 +109,7 @@
     </div>
 
     <!-- footer section  -->
-    <footer class="p-6 text-center " >
+    <footer class="p-6 text-center">
       <p class="">Copyright © 2022 - All right reserved</p>
     </footer>
 
