--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <!-- news found title section -->
         <div class="container mx-auto">
           <h3 class="text-xl font-medium">
-            <span id="item-number">0</span> items found for category
-            <span class="category-name">Entertainment</span>
+            <span id="item-number">0</span> items found for category 
+            <span id="default-category"></span>
           </h3>
         </div>
       </section>
