--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <li><a>Blog</a></li>
               <li tabindex="0">
                 <a>
-                  DOCUMENTATION
+                  DOC
                   <svg
                     class="fill-current"
                     xmlns="http://www.w3.org/2000/svg"
