--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
         <!-- 1st top navbar  -->
         <div class="navbar bg-base-100">
           <div class="flex-1">
-            <a class="btn btn-ghost normal-case text-xl bg-green-300"
-            href="index.html"  
-            >News Website API</a
+            <a
+              class="btn btn-ghost normal-case text-xl bg-green-300"
+              href="index.html"
+              >News Website API</a
             >
           </div>
           <div class="flex-none">
@@ -66,6 +67,10 @@
           </div>
         </div>
         <div class="divider"></div>
+
+        <!-- spinner -->
+        <progress id="spinner" class="progress w-full my-4 hidden"></progress>
+
         <!-- 2nd top navbar  -->
         <div class="mb-6">
           <ul
