--- a/index.html
+++ b/index.html
@@ -39,29 +39,12 @@
           </div>
           <div class="flex-none">
             <ul class="menu menu-horizontal p-0">
-              <li><a href="index.html">News</a></li>
+              <li class="bg-primary text-white rounded-lg"><a href="index.html" >News</a></li>
               <li><a href="blog.html">Blog</a></li>
               <li tabindex="0">
                 <a>
                   DOC
-                  <svg
-                    class="fill-current"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
-                    />
-                  </svg>
                 </a>
-                <ul class="p-2 bg-base-100">
-                  <li><a>HTML5</a></li>
-                  <li><a>CSS3</a></li>
-                  <li><a>Javascript</a></li>
-                  <li><a>API</a></li>
-                </ul>
               </li>
             </ul>
           </div>
@@ -79,7 +62,7 @@
           ></ul>
         </div>
         <!-- news found title section -->
-        <div class="container mx-auto">
+        <div class="container mx-auto my-10">
           <h3 class="text-xl font-medium">
             <span id="item-number">0</span> items found for category
             <span id="default-category"></span>
