--- a/index.html
+++ b/index.html
@@ -39,20 +39,17 @@
           </div>
           <div class="flex-none">
             <ul class="menu menu-horizontal p-0">
-              <li class="bg-primary text-white rounded-lg"><a href="index.html" >News</a></li>
+              <li class="bg-primary text-white rounded-lg">
+                <a href="index.html">News</a>
+              </li>
               <li><a href="blog.html">Blog</a></li>
               <li tabindex="0">
-                <a>
-                  DOC
-                </a>
+                <a> DOC </a>
               </li>
             </ul>
           </div>
         </div>
         <div class="divider"></div>
-
-        <!-- spinner -->
-        <progress id="spinner" class="progress w-full my-4 hidden"></progress>
 
         <!-- 2nd top navbar  -->
         <div class="mb-6">
@@ -69,6 +66,9 @@
           </h3>
         </div>
       </section>
+
+      <!-- spinner -->
+      <progress id="spinner" class="progress w-full my-4 hidden"></progress>
     </header>
 
     <!-- news container  -->
