--- a/blog.html
+++ b/blog.html
@@ -30,19 +30,20 @@
       <!-- 1st top navbar  -->
       <div class="navbar bg-base-100">
         <div class="flex-1">
-          <a class="btn btn-ghost normal-case text-xl bg-green-300"
-          href="index.html"  
-          >News Website API</a
+          <a
+            class="btn btn-ghost normal-case text-xl bg-green-300"
+            href="index.html"
+            >News Website API</a
           >
         </div>
         <div class="flex-none">
           <ul class="menu menu-horizontal p-0">
             <li><a href="index.html">News</a></li>
-            <li class="bg-primary text-white rounded-lg"><a href="blog.html">Blog</a></li>
+            <li class="bg-primary text-white rounded-lg">
+              <a href="blog.html">Blog</a>
+            </li>
             <li tabindex="0">
-              <a>
-                DOC
-              </a>
+              <a> DOC </a>
             </li>
           </ul>
         </div>
@@ -153,5 +154,10 @@
         </div>
       </section>
     </main>
+
+    <!-- footer section  -->
+    <footer class="p-6 text-center mt-28">
+      <p class="">Copyright © 2022 - All right reserved</p>
+    </footer>
   </body>
 </html>
