--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
 
     <!-- footer section  -->
-    <footer class="p-6 text-center">
+    <footer class="p-6 text-center mt-28">
       <p class="">Copyright © 2022 - All right reserved</p>
     </footer>
 
